# ggr_portfolio

./: README.md  pyproject.toml
app/: builder.py  home.py  main.py  routes.py
app/pages/: 2_Entity_Extraction_Tool.py  3_contact.py  4_chatbot.py  5_Travel_Agent.py  5_Travel_Assistant.py
app/travel_agent/: base_models.py  builder.py  config.py  excursions.py  graph.py  main.py  routes.py  setup.py  utilities.py  workflows.py
app/travel_agent/tools/: cars.py  excursions.py  flights.py  hotels.py  retriever.py
travel_agent/: prompts.py  workflows.py
